Treat stories a bit better in the template

--- a/newswall/templates/newswall/story_archive.html
+++ b/newswall/templates/newswall/story_archive.html
@@ -22,7 +22,7 @@
             <a href="{{ category.source.get_absolute_url }}">{{ category.source }}</a> |
             {{ story.timestamp|date:"j F Y" }}
         </small>
-        {{ story.body|striptags|truncatewords:20 }}
+        <p>{{ story.body|striptags|truncatewords:20|safe|urlize }}</p>
     </article>
 {% endfor %}
 {% endblock %}
