--- a/newswall/templates/newswall/story_detail.html
+++ b/newswall/templates/newswall/story_detail.html
@@ -11,5 +11,5 @@
     {{ object.timestamp|date:"j F Y" }}
 </small>
 
-{{ story.body|striptags|truncatewords:20 }}
+<p>{{ story.body|striptags|truncatewords:20|safe|urlize }}</p>
 {% endblock %}
