Remove the inadvertently added explicit FeinCMS dependency
The application content functionality is preserved.

Fixes #6.

--- a/newswall/templates/newswall/story_detail.html
+++ b/newswall/templates/newswall/story_detail.html
@@ -1,6 +1,6 @@
-{% extends feincms_page.template.path|default:"base.html" %}
+{% extends view.base_template|default:"base.html" %}
 
-{% load feincms_tags i18n %}
+{% load i18n %}
 
 {% block title %}{% trans "News" %} - {{ block.super }}{% endblock %}
 
